--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,11 @@
 version: '3'
 services:
-  web:
+  app:
     build: .
     ports:
       - "5000:5000"
     volumes:
-      - .:/code
+      - .:/project
     environment:
       FLASK_ENV: development
     env_file:
